--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "dev": "node --watch ./bin/www"
+    "dev": "NODE_ENV=dev node --watch ./bin/www"
   },
   "dependencies": {
     "bcryptjs": "^3.0.2",
